syntax = "proto3";
package pryzm.assets.v1;

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "pryzm/assets/v1/params.proto";
import "pryzm/assets/v1/refractable_asset.proto";

option go_package = "github.com/pryzm-finance/pryzm-core/x/assets/types/v1";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc RegisterAsset(MsgRegisterAsset) returns (MsgRegisterAssetResponse);
  rpc DisableAsset(MsgDisableAsset) returns (MsgDisableAssetResponse);
  rpc UpdateMaturityParams(MsgUpdateMaturityParams) returns (MsgUpdateMaturityParamsResponse);
  rpc UpdateFeeRatios(MsgUpdateFeeRatios) returns (MsgUpdateFeeRatiosResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgRegisterAsset {
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  RefractableAsset asset = 2 [(gogoproto.nullable) = false];
}

message MsgRegisterAssetResponse {}

message MsgDisableAsset {
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string asset_id = 2;
}

message MsgDisableAssetResponse {}

message MsgUpdateMaturityParams {
  option (cosmos.msg.v1.signer) = "authority";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string asset_id = 2;
  MaturityParams params = 3 [(gogoproto.nullable) = false];
}

message MsgUpdateMaturityParamsResponse {}

message MsgUpdateFeeRatios {
  option (cosmos.msg.v1.signer) = "authority";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string asset_id = 2;
  FeeRatios fee_ratios = 3 [(gogoproto.nullable) = false];
}

message MsgUpdateFeeRatiosResponse {}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  Params params = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateParamsResponse {}
// this line is used by starport scaffolding # proto/tx/message
